# levd

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  LICENSE  README.md  constants.h  cpu_temperature_monitor.hpp  format.bash  kraken_driver.cpp  kraken_driver.h  kraken_driver.hpp  leviathan_config.cpp  leviathan_config.h  leviathan_config.hpp  leviathan_service.cpp  leviathan_service.h  leviathan_service.hpp  main.cpp  usb_descriptor_utils.cpp  usb_descriptor_utils.h  usb_descriptor_utils.hpp  version.h.in
.circleci/: config.yml
config/: kraken-start.sh  levd.cfg  levd.service
docs/: kraken_usb.txt
